--- a/src/playground/get_raw_vrdata.ipynb
+++ b/src/playground/get_raw_vrdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,20 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching from 2023-11-01 to 2023-11-02 (2 days)\n"
+      "Fetching from 2023-11-01 to 2023-11-30 (30 days)\n"
      ]
     }
    ],
    "source": [
     "START_DATE = \"2023-11-01\"\n",
-    "END_DATE = \"2023-11-02\"\n",
+    "END_DATE = \"2023-11-30\"\n",
     "\n",
     "\n",
     "start_date = date.fromisoformat(START_DATE)\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,35 @@
      "output_type": "stream",
      "text": [
       "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-01.json\n",
-      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-02.json\n"
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-02.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-03.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-04.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-05.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-06.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-07.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-08.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-09.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-10.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-11.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-12.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-13.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-14.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-15.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-16.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-17.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-18.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-19.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-20.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-21.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-22.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-23.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-24.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-25.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-26.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-27.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-28.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-29.json\n",
+      "/workspaces/VR-data/data/datalake/staging/vr_data/2023-11-30.json\n"
      ]
     }
    ],
